# container-defense-stack

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  container_guard_cli.py  pyproject.toml
.githooks/: pre-commit
apparmor/: container-default.profile
cli/: __init__.py  main.py
docker/: __init__.py  image_security_scanner.py  layer_scanner.py
docs/: aks-node-pool-hardening.md  architecture.md  capability-drop-baseline.md  ci-policy-check-example.md  eks-node-group-hardening.md  gke-autopilot-security-baseline.md  pod-security-standards.md  poddisruptionbudget-baseline.md  validator-rule-reference.md  validator-rules.md
examples/: docker-compose-secure.yml
kubernetes/: __init__.py  admission_policy_analyzer.py  aks_node_pool_analyzer.py  container_escape_detector.py  cronjob-secure.yaml  eks_node_group_analyzer.py  gke_autopilot_analyzer.py  ingress_security_analyzer.py  limitrange-default.yaml  netpol_analyzer.py  pod_security_analyzer.py  poddisruptionbudget-stateless-baseline.yaml  rbac_gap_analyzer.py  resource_quota_analyzer.py  resourcequota-default.yaml  secret_volume_analyzer.py  service_account_auditor.py  workload_identity_checker.py
policies/: __init__.py  gatekeeper-deny-privileged-containers.yaml  kyverno-require-nonroot.yaml
runtime/: container_drift_detector.py  falco_rules.py
seccomp/: default-seccomp.json
templates/: secure.Dockerfile
tests/: test_admission_policy_analyzer.py  test_admission_webhook_templates.py  test_aks_node_pool_analyzer.py  test_cli_commands.py  (+44 more)
(+58 files in other folders)
